2004-02-05  Teodor Zlatanov  <tzz@lifelogs.com>

	* spam.el (spam-register-routine)
	(spam-log-processing-to-registry, spam-log-registered-p)
	(spam-log-unregistration-needed-p, spam-log-undo-registration):
	change "check" to "spam-check" for semi-clarity

2004-02-05  Jesper Harder  <harder@ifa.au.dk>

	* pop3.el: Require nnheader.

	* mml-smime.el: Require cl.  Autoload message-fetch-field.

	* mml-sec.el (mml-signencrypt-style): Don't depend on Gnus.

	* gnus-picon.el: Require cl.

	* gnus-fun.el: Require gnus-ems and gnus-util.

	* gnus.el (gnus-method-to-server): Move defsubst before first use.

	* gnus-diary.el (gnus-diary-header-schedule): caddr -> car (cddr

	* gnus-art.el (gnus-article-edit-mode): Define before first
	reference.

2004-02-04  Jesper Harder  <harder@ifa.au.dk>

	* gnus-uu.el (gnus-uu-check-correct-stripped-uucode): Simplify.
	(gnus-uu-post-encoded): Use point-at-bol.

	* gnus-topic.el (gnus-group-active-topic-p): do.

	* gnus-start.el (gnus-newsrc-to-gnus-format): do.

	* gnus-group.el (gnus-group-kill-region): do.

	* gnus-art.el (article-date-ut): do.

	* message.el (message-fetch-field): Remove redundant
	case-fold-search binding.
	(message-narrow-to-field): Simplify.

2004-02-03  Reiner Steib  <Reiner.Steib@gmx.de>

	* spam.el (spam-directory): Derive from `gnus-directory'.

	* spam-report.el (spam-report-url-to-file)
	(spam-report-requests-file): New function and variable for offline
	reporting.
	(spam-report-url-ping-function): Add `spam-report-url-to-file'
	and user defined function.
	(spam-report-url-ping-mm-url): Remove doubled slash.

2004-02-03  Teodor Zlatanov  <tzz@lifelogs.com>

	* spam.el (spam-list-of-processors): fixed spamassassin variable names

2004-02-03  Jesper Harder  <harder@ifa.au.dk>

	* spam.el (spam-check-spamoracle, spam-spamoracle-learn): Fix
	format string mismatch.

	* sieve.el (sieve-deactivate-all): do.

	* nnfolder.el (nnfolder-request-set-mark, nnfolder-save-marks): do.
